# halite3-bot-1

./: Cargo.toml  README.md  compare_bots.py  config.json  run_game.sh  visualize.py
bot/: Cargo.toml
bot/src/: main.rs  navigation_system.rs  newturn.rs  ship_ai.rs
bot/src/hlt/: game.rs  game_map.rs  ship.rs
botlib/: Cargo.toml
botlib/src/: ai_manager.rs  commander.rs  gamestate.rs  lib.rs  movement_predictor.rs  newturn.rs  pda.rs  ship_ai.rs  utils.rs
botlib/src/hlt/: command.rs  map_cell.rs  mod.rs  navi.rs  player.rs  position.rs
hlt-replay/: Cargo.toml
hlt-replay/src/: lib.rs  replay.rs  state.rs
machine_learning/: agent_mover.py  ai1.npz  ai2b.npz  ce_optimize.py  cross-entropy-method.py  cross_entropy_method.py  diffusion.py  pheromones.py  policy_gradient.py  policy_gradient2.py  policy_gradient3.py  policy_gradient4.py  policy_supervised.py  tmpcfg.json  val_sim.py
old_bots/: v20.cfg.json
src/: behavior_tree.rs  bt_tasks.rs  commander.rs  config.rs  main.rs  movement.rs  movement_predictor.rs  navigation_system.rs  pda.rs  ship_ai.rs  utils.rs
src/hlt/: command.rs  direction.rs  dropoff.rs  game.rs  game_map.rs  map_cell.rs  mod.rs  navi.rs  player.rs  position.rs  ship.rs  shipyard.rs
submissions/: v22.cfg.json
whatif/: Cargo.toml
whatif/src/: main.rs  support_gfx.rs
whatif/src/shader/: glsl_400.vert
